<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, FieldDroidActivity!</string>
    <string name="app_name">Field Assistant</string>
    <string name="serverip">Server IP:</string>
    <string name="remotepath">Remote Path:</string>
    <string name="localpath">Local Path</string>
    <string name="settings">FieldDroid Settings</string>
    <string name="selectevent">Select Event</string>
    <string name="event">Event ID</string>
    <string name="round">Round</string>
    <string name="flight">Flight</string>
    <string name="eventname">Event Name</string>
    <string name="deleteselectedevent">Delete selected event</string>
    <string name="deleteallevents">Delete all events</string>
    <string name="transfer">Transfer event/round</string>
    <string name="preferences">Preferences</string>
	<string name="about">About</string>
    <string name="ok">OK</string>
    <string name="options">Options</string>
    <string name="no">NO</string>
    <string name="yes">Yes</string>
    <string name="continuestr">Continue</string>
    <string name="event_type">Event Type</string>
    <string name="et_default">Horizontal Jumps</string>
    <string name="backup">Backup Database</string>

</resources>