<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/options" 
        android:textSize="20dip"/>
<TableLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
   

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >



            <Button
                android:id="@+id/deleteall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete All" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleteallevents" />
        </TableRow>


    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Preferences" 
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preferences" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about" />

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup" />

    </TableRow>
</TableLayout>

<Button
    android:id="@+id/ok"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="Back" />

</LinearLayout>